--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,6 @@
-apiKey: "AIzaSyAn20U0VgZB-OkOUVYT6mpH5nr3xEDA564",
-authDomain: "pharma-f0711.firebaseapp.com",
-projectId: "pharma-f0711",
-storageBucket: "pharma-f0711.appspot.com",
-messagingSenderId: "1042932452942",
-appId: "1:1042932452942:web:5501e8089df058f9f27d1f"
+apiKey: "AIzaSyDo51f8iV709wMAF33M1fXWJPsxu8q-5ic",
+authDomain: "health-care-app-9df12.firebaseapp.com",
+projectId: "health-care-app-9df12",
+storageBucket: "health-care-app-9df12.appspot.com",
+messagingSenderId: "599902470660",
+appId: "1:599902470660:web:0d10e830e42d3a42edeb51"
